--- a/capacidadesTecnicas.html
+++ b/capacidadesTecnicas.html
@@ -77,15 +77,15 @@
             <div class="texto izquierda">
               <h3 data-i18n="menuAmplificadores">Amplificadores</h3>
               <span data-i18n="textoAmplificadores"></span>
-              <h3>Nuestros Amplificadores</h3>
-              <span>Contamos con una amplia gama de amplificadores de radiofrecuencia diseñados para cubrir desde bandas bajas hasta frecuencias milimétricas, con potencias que alcanzan varios kilovatios. Nuestra selección incluye modelos de fabricantes líderes como ENI, LogiMetrics, Amplifier Research, BONN Elektronik, ETM, CPI y TMD, entre otros. Estos equipos ofrecen configuraciones adaptadas a distintas interfaces, rangos de frecuencia y tipos de alimentación, garantizando compatibilidad con los requisitos más exigentes de ensayo.<br>
+              <h3 data-i18n="h3NuestrosAmplificadores">Nuestros Amplificadores</h3>
+              <span data-i18n="textoNuestrosAmplificadores">Contamos con una amplia gama de amplificadores de radiofrecuencia diseñados para cubrir desde bandas bajas hasta frecuencias milimétricas, con potencias que alcanzan varios kilovatios. Nuestra selección incluye modelos de fabricantes líderes como ENI, LogiMetrics, Amplifier Research, BONN Elektronik, ETM, CPI y TMD, entre otros. Estos equipos ofrecen configuraciones adaptadas a distintas interfaces, rangos de frecuencia y tipos de alimentación, garantizando compatibilidad con los requisitos más exigentes de ensayo.<br>
 
               Cada amplificador ha sido seleccionado por su rendimiento en entornos de prueba críticos, incluyendo cámaras de vacío térmico, bancos de ensayo multipactor y sistemas de validación de conectores y materiales RF. La tabla siguiente presenta las especificaciones clave de nuestros modelos disponibles, facilitando la elección del equipo más adecuado según la aplicación técnica y el rango de operación requerido.</span>
             </div>
           </div>
           <div class="numero">1</div>
           <div class="contenedor-tabla">
-            <span class="span-caption">Tabla de amplificadores y características disponibles en nuestro laboratorio</span>
+            <span class="span-caption" data-i18n="captionTablaAmplificadores">Tabla de amplificadores y características disponibles en nuestro laboratorio</span>
             <table class="tabla-original" id="tabla-amplificadores">
              <thead>
                <tr>
@@ -95,7 +95,7 @@
                  <th>INTERFACE</th>
                  <th>OUTPUT POWER (W)</th>
                  <th>POWER TYPE</th>
-                 <th>MODELO</th>
+                 <th>MODEL</th>
                </tr>
              </thead>
              <tbody>
@@ -165,7 +165,7 @@
         <div class="numero">2</div>
         <div class="contenedor-tabla">
           <table class="tabla-original">
-            <caption>Nuestras cámaras de vacío</caption>
+            <caption data-i18n="captionTablaCamaras">Nuestras cámaras de vacío</caption>
             <thead>
               <tr>
                 <th>Characteristic</th>
