--- a/multimedia.html
+++ b/multimedia.html
@@ -109,16 +109,39 @@
              <span>PDF RF High-power Testing Within the ECSS Structure </span>
            </figcaption>
          </figure>
+         <figure>
+           <img src="imagenes/camaraMulcopower.png" data-src="pdf/camaraMulcopower.pdf" alt="Imagen del pdf de la cámara de vacío Mulcopower">
+           <figcaption class="figcaption-pdf">
+             <img src="imagenes/pdf_2.png" alt="Icono PDF" class="icono-pdf">
+             <span data-i18n="multimediaPdfMulcopower">PDF de la cámara de vacío Mulcopower</span>
+           </figcaption>
+         </figure>
+         <figure>
+           <img src="imagenes/camaraTVC1.png" data-src="pdf/camaraTVC1.pdf" alt="Imagen del pdf de la cámara de vacío TVC1 Cosmos-01">
+           <figcaption class="figcaption-pdf">
+             <img src="imagenes/pdf_2.png" alt="Icono PDF" class="icono-pdf">
+             <span data-i18n="multimediaPdfTVC1">PDF de la cámara de vacío TVC1 Cosmos-01</span>
+           </figcaption>
+         </figure>
+         <figure>
+           <img src="imagenes/camaraTVC2.png" data-src="pdf/camaraTVC2.pdf" alt="Imagen del pdf de la cámara de vacío TVC2 Cosmos-02">
+           <figcaption class="figcaption-pdf">
+             <img src="imagenes/pdf_2.png" alt="Icono PDF" class="icono-pdf">
+             <span data-i18n="multimediaPdfTVC2">PDF de la cámara de vacío TVC2 Cosmos-02</span>
+           </figcaption>
+         </figure>
+         <figure>
+           <img src="imagenes/camaraMontena.png" data-src="pdf/camaraMontena.pdf" alt="Imagen del pdf de la cámara de PIM anecoica Montena">
+           <figcaption class="figcaption-pdf">
+             <img src="imagenes/pdf_2.png" alt="Icono PDF" class="icono-pdf">
+             <span data-i18n="multimediaPdfMontena">PDF de la cámara de PIM anecoica Montena</span>
+           </figcaption>
+         </figure>
         </div>
 
       </div>
 
     </section>
-<!--     <section id="EnlacesInteres">
-      <div>
-        <a href="https://www.hps-gmbh.com/5491/">Podeis visitar este enlace de interés</a>
-      </div>
-    </section> -->
 
   </main>
 
