--- a/capacidadesTecnicas.html
+++ b/capacidadesTecnicas.html
@@ -10,6 +10,14 @@
   <link rel="stylesheet" href="estilos/slideshowControl.css">
   <link rel="stylesheet" href="estilos/estilosCapacidades.css">
   <link rel="stylesheet" href="estilos/responsive.css">
+
+  <style type="text/css">
+    *{
+/*      border: 1px solid red;*/
+}
+
+
+</style>
 </head>
 <body>
   <header class="barra-navegacion">
@@ -68,19 +76,22 @@
       <header>
         <h2 data-i18n="menuCapacidadesTecnicas">Capacidades técnicas</h2>
       </header>
-
       <div class="capacidades-detalladas">
-
         <section class="bloque-capacidades grupo1" id="amplificadores">
           <div class="contenedor-bloques">
             <img src="imagenes/amplificadores2.jpg" alt="Fotografía de Amplificadores de radiofrecuancia">
             <div class="texto izquierda">
               <h3 data-i18n="menuAmplificadores">Amplificadores</h3>
               <span data-i18n="textoAmplificadores"></span>
+            </div>
+          </div>
+          <div class="contenedor-bloques2 amplificadores">
+            <div class="texto izquierda">
               <h3 data-i18n="h3NuestrosAmplificadores">Nuestros Amplificadores</h3>
-              <span data-i18n="textoNuestrosAmplificadores">Contamos con una amplia gama de amplificadores de radiofrecuencia diseñados para cubrir desde bandas bajas hasta frecuencias milimétricas, con potencias que alcanzan varios kilovatios. Nuestra selección incluye modelos de fabricantes líderes como ENI, LogiMetrics, Amplifier Research, BONN Elektronik, ETM, CPI y TMD, entre otros. Estos equipos ofrecen configuraciones adaptadas a distintas interfaces, rangos de frecuencia y tipos de alimentación, garantizando compatibilidad con los requisitos más exigentes de ensayo.<br>
-
-              Cada amplificador ha sido seleccionado por su rendimiento en entornos de prueba críticos, incluyendo cámaras de vacío térmico, bancos de ensayo multipactor y sistemas de validación de conectores y materiales RF. La tabla siguiente presenta las especificaciones clave de nuestros modelos disponibles, facilitando la elección del equipo más adecuado según la aplicación técnica y el rango de operación requerido.</span>
+              <span data-i18n-html="textoNuestrosAmplificadores"></span>
+            </div>
+            <div class="imagenes-bloque2 amplificadores">
+              <img src="imagenes/amplificadores3.jpg">
             </div>
           </div>
           <div class="numero">1</div>
@@ -160,31 +171,82 @@
             <span data-i18n="textoCamaras"></span>
           </div>
           <img src="imagenes/camaras.png" alt="Fotografía de cámara de alto vacío">
-          
+        </div>
+        <div class="contenedor-bloques2 dos-filas">
+          <div class="contenedor-fila1">
+            <div class="fila1-hijo1">
+              <div class="contenedor-tabla">
+                <table class="tabla-original">
+                  <caption data-i18n="captionTablaCamaras"></caption>
+                  <thead>
+                    <tr>
+                      <th>Characteristic</th>
+                      <th>MULCOPOWER TVAC</th>
+                      <th>TVC-1</th>
+                      <th>TVC-2</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr><td rowspan="2">Useful Capacity</td><td>Ø 1000mm</td><td>Ø 1300mm</td><td>Ø 800mm</td></tr>
+                    <tr><td>L 500</td><td>L 1500</td><td>L 1000</td></tr>
+                    <tr><td rowspan="2">Temperature Range</td><td>-70°C to</td><td>-150°C to</td><td>-150°C to</td></tr>
+                    <tr><td>+90°C</td><td>+150°C</td><td>+150°C</td></tr>
+                    <tr><td rowspan="2">Vacuum</td><td>Better than</td><td>Better than</td><td>Better than</td></tr>
+                    <tr><td>5x10<sup>-6</sup> mbar</td><td>1x10<sup>-6</sup> mbar</td><td>5x10<sup>-6</sup> mbar</td></tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="fila1-hijo2">
+              <div class="texto izquierda">
+                <h3 data-i18n="h3NuestrasCamarasVacio">Nuestras cámaras de vacío</h3>
+                <span data-i18n-html="textoNuestrasCamarasVacio"></span>
+              </div>
+            </div>
+          </div>
+          <div class="contenedor-fila2">
+            <div class="texto derecha">
+              <h3>Cámara PIM anecoica Montena</h3>
+              <span>
+                Disponemos de una cámara térmica PIM especialmente diseñada para ensayos radiados, con atmósfera de nitrógeno puro y un rango de temperatura de hasta 150°C. Su diseño optimiza la estabilidad térmica durante los ensayos, garantizando condiciones controladas para mediciones precisas de intermodulación pasiva (PIM), incluso en entornos exigentes de alta temperatura y atmósfera inerte.
+              </span>
+            </div>
+            <div class="contenedor-tabla">
+              <table class="tabla-original anecoica">
+                <caption>Chamber Specifications</caption>
+                <thead>
+                  <tr>
+                    <th>Characteristic</th>
+                    <th>Chamber</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Anechoic PIM chamber measures</td>
+                    <td>5000 x 4200 x 3300 mm</td>
+                  </tr>
+                  <tr>
+                    <td>Thermal PIM chamber measures</td>
+                    <td>1800 x 1800 x 1500 mm</td>
+                  </tr>
+                  <tr>
+                    <td>Temperature Range</td>
+                    <td>-150°C to +150°C</td>
+                  </tr>
+                  <tr>
+                    <td>Humidity</td>
+                    <td>Zero humidity (full nitrogen atmosphere)</td>
+                  </tr>
+                  <tr>
+                    <td>Frecuency</td>
+                    <td>10 KHz to 50 GHz</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
         <div class="numero">2</div>
-        <div class="contenedor-tabla">
-          <table class="tabla-original">
-            <caption data-i18n="captionTablaCamaras">Nuestras cámaras de vacío</caption>
-            <thead>
-              <tr>
-                <th>Characteristic</th>
-                <th>MULCOPOWER TVAC</th>
-                <th>TVC-1</th>
-                <th>TVC-2</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr><td rowspan="2">Useful Capacity</td><td>Ø 1000mm</td><td>Ø 1300mm</td><td>Ø 800mm</td></tr>
-              <tr><td>L 500</td><td>L 1500</td><td>L 1000</td></tr>
-              <tr><td rowspan="2">Temperature Range</td><td>-70°C to</td><td>-150°C to</td><td>-150°C to</td></tr>
-              <tr><td>+90°C</td><td>+150°C</td><td>+150°C</td></tr>
-              <tr><td rowspan="2">Vacuum</td><td>Better than</td><td>Better than</td><td>Better than</td></tr>
-              <tr><td>5x10<sup>-6</sup> mbar</td><td>1x10<sup>-6</sup> mbar</td><td>5x10<sup>-6</sup> mbar</td></tr>
-            </tbody>
-          </table>
-        </div>
-        
       </section>
 
       <section class="bloque-capacidades grupo3" id="areaLimpia">
@@ -195,13 +257,20 @@
             <span data-i18n="textoAreaLimpia"></span>
           </div>
         </div>
+        <div class="contenedor-bloques2">
+          <div class="texto izquierda">
+            <h3 data-i18n="h3NuestraSalaLimpia">Nuestra sala limpia</h3>
+            <span data-i18n="textoNuestraSalaLimpia"></span>
+          </div>
+          <div class="imagenes-bloque2">
+            <img src="imagenes/lab.jpg">
+            <img src="imagenes/lab3.png">
+          </div>
+        </div>
         <div class="numero">3</div>
       </section>
-
     </div>
-
   </section>
-
 </main>
 
 <footer class="pie">
