--- a/contacto.html
+++ b/contacto.html
@@ -69,7 +69,7 @@
         <h2 data-i18n="contacto">Contacto</h2>
       </header>
 
-      <div class="bloques-contacto" id="contacto">
+      <div class="bloques-contacto efecto-aparecer" id="contacto">
           <div class="dato">
             <strong data-i18n="contactoResponsable">Responsable del Servicio</strong>
             Luis Fernando Sánchez Miró
@@ -84,7 +84,7 @@
           </div>
           <div class="dato">
             <strong data-i18n="contactoLaboratorio">Laboratorio / Unidad</strong>
-            <span data-i18n="contactoLaboratorioSpan">Laboratorio de potencia de RF</span>
+            <span data-i18n-html="contactoLaboratorioSpan">Laboratorio de potencia de RF</span>
           </div>
           <div class="dato">
             <strong data-i18n="contactoArea">Área</strong>
@@ -100,7 +100,7 @@
           </div>
           <div class="dato">
             <strong data-i18n="contactoLocalizacion">Localización</strong>
-            <span data-i18n="contactoLocalizacionSpan">Sede Central INTA Torrejón de Ardoz</span>
+            <span data-i18n-html="contactoLocalizacionSpan">Sede Central INTA Torrejón de Ardoz</span>
           </div>
         </div>
 
@@ -112,12 +112,12 @@
     <div class="contenedor-footer">
       <img src="imagenes/logoInta2.png" alt="Logo INTA" class="logo-footer">
       <address class="info-footer">
-        <p><small data-i18n="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
+        <p><small data-i18n-html="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
         <p data-i18n="direccionDireccion">Ctra. Ajalvir, km 4, 28850 Torrejón de Ardoz, Madrid</p>
       </address>
       <nav class="enlaces-footer" aria-label="Enlaces legales y de contacto">
-        <a href="javascript:void(0)" data-i18n="footerAviso">Aviso Legal</a>
-        <a href="javascript:void(0)" data-i18n="footerPolitica">Política de Privacidad</a>
+        <a href="avisoLegal.html#avisoLegal" data-i18n="footerAviso">Aviso Legal</a>
+        <a href="politicaPrivacidad.html#politicaPrivacidad" data-i18n="footerPolitica">Política de Privacidad</a>
         <a href="javascript:void(0)" data-i18n="contacto">Contacto</a>
       </nav>
     </div>
