--- a/ensayos.html
+++ b/ensayos.html
@@ -72,7 +72,7 @@
       <div class="ensayos-detallados">
 
         <section class="bloque-ensayo grupo1" id="multipactor">
-          <img src="imagenes/multipactor.jpg" alt="Ensayo Multipactor">
+          <img class="efecto-aparecer" src="imagenes/multipactor.jpg" alt="Ensayo Multipactor">
           <div class="numero">1</div>
           <div class="texto izquierda">
             <h3 data-i18n="menuMultipactor">Multipactor</h3>
@@ -86,11 +86,11 @@
             <div data-i18n-html="textoCorona"></div>
           </div>
           <div class="numero">2</div>
-          <img src="imagenes/corona.jpg" alt="Ensayo Corona">
+          <img class="efecto-aparecer" src="imagenes/corona.jpg" alt="Ensayo Corona">
         </section>
 
         <section class="bloque-ensayo grupo3" id="pim">
-          <img src="imagenes/pim.jpg" alt="Ensayo PIM">
+          <img class="efecto-aparecer" src="imagenes/pim.jpg" alt="Ensayo PIM">
           <div class="numero">3</div>
           <div class="texto izquierda">
             <h3 data-i18n="menuPim">PIM</h3>
@@ -104,7 +104,7 @@
             <div data-i18n-html="textoPowerHandling"></div>
           </div>
           <div class="numero">4</div>
-          <img src="imagenes/powerHandling.jpg" alt="Ensayo Power Handling">
+          <img class="efecto-aparecer" src="imagenes/powerHandling.jpg" alt="Ensayo Power Handling">
         </section>
 
       </div>
@@ -117,12 +117,12 @@
     <div class="contenedor-footer">
       <img src="imagenes/logoInta2.png" alt="Logo INTA" class="logo-footer">
       <address class="info-footer">
-        <p><small data-i18n="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
+        <p><small data-i18n-html="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
         <p data-i18n="direccionDireccion">Ctra. Ajalvir, km 4, 28850 Torrejón de Ardoz, Madrid</p>
       </address>
       <nav class="enlaces-footer" aria-label="Enlaces legales y de contacto">
-        <a href="javascript:void(0)" data-i18n="footerAviso">Aviso Legal</a>
-        <a href="javascript:void(0)" data-i18n="footerPolitica">Política de Privacidad</a>
+        <a href="avisoLegal.html#avisoLegal" data-i18n="footerAviso">Aviso Legal</a>
+        <a href="politicaPrivacidad.html#politicaPrivacidad" data-i18n="footerPolitica">Política de Privacidad</a>
         <a href="contacto.html#contacto" data-i18n="contacto">Contacto</a>
       </nav>
     </div>
