--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="contenedor-quienes">
         <article class="quienesSomos texto-quienes">
           <div class="texto-lateral">
-            <h3 data-i18n="h3Quienes">Laboratorio INTA de radiofrecuencia</h3>
+            <h3 data-i18n-html="h3Quienes">Laboratorio INTA de radiofrecuencia</h3>
             <div data-i18n-html="textoQuienes"></div>
           </div>
           <div class="imagen-quienes"><img src="imagenes/lab.jpg" data-i18n-alt="altImagenQuienes" alt="Vista del área limpia del laboratorio de radiofrecuencia del INTA"></div>
@@ -85,7 +85,7 @@
           <div class="contenedor-introduccion">
             <article class="introduccion texto-introduccion">
               <div class="texto-lateral">
-                <h3 data-i18n="h3Introduccion"></h3>
+                <h3 data-i18n-html="h3Introduccion"></h3>
                 <div data-i18n-html="textoIntroduccion"></div>
               </div>
               <div class="imagen-introduccion"><img src="imagenes/fotoMisionGalileo.jpg" data-i18n-alt="altImagenIntroduccion" alt=""></div>
@@ -97,7 +97,7 @@
       <header>
         <h2 data-i18n="menuEnsayos">Ensayos</h2>
       </header>
-      <div class="contenedor-ensayos">
+      <div class="contenedor-ensayos efecto-aparecer">
         <div class="ensayos-grid">
           <article class="ensayo" onclick="window.location.href='ensayos.html#multipactor'">
             <h3 class="visualmente-oculto">Multipactor</h3>
@@ -117,7 +117,7 @@
             <h3 class="visualmente-oculto">PIM</h3>
             <figure>
               <img src="imagenes/iconoPim.png" data-i18n-alt="altIconoPim" alt="Icono de PIM" title="PIM">
-              <figcaption data-i18n="menuPim">PIM</figcaption>
+              <figcaption data-i18n-html="menuPim">PIM</figcaption>
             </figure>
           </article>
           <article class="ensayo" onclick="window.location.href='ensayos.html#powerHandling'">
@@ -140,7 +140,7 @@
         <h2 data-i18n="menuCapacidadesTecnicas">Capacidades Técnicas</h2>
       </header>
 
-      <div class="contenedor-capacidades">
+      <div class="contenedor-capacidades efecto-aparecer">
         <div class="capacidades-grid">
           <article class="capacidad" onclick="window.location.assign('capacidadesTecnicas.html#amplificadores')">
             <h3 class="visualmente-oculto">Amplificadores</h3>
@@ -227,7 +227,7 @@
           Universidad Politécnica de Madrid (UPM)
         </li>
       </ul>
-      <div class="carrusel-misiones">
+      <div class="carrusel-misiones efecto-aparecer">
         <button class="mision-flecha" aria-label="Desplazar a misión previa">&#10094;</button>
         <div class="carrusel-ventana">
           <div class="carrusel-imagenes">
@@ -251,12 +251,12 @@
     <div class="contenedor-footer">
       <img src="imagenes/logoInta2.png" alt="Logo INTA" class="logo-footer">
       <address class="info-footer">
-        <p><small data-i18n="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
+        <p><small data-i18n-html="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
         <p data-i18n="direccionDireccion">Ctra. Ajalvir, km 4, 28850 Torrejón de Ardoz, Madrid</p>
       </address>
       <nav class="enlaces-footer" aria-label="Enlaces legales y de contacto">
-        <a href="javascript:void(0)" data-i18n="footerAviso">Aviso Legal</a>
-        <a href="javascript:void(0)" data-i18n="footerPolitica">Política de Privacidad</a>
+        <a href="avisoLegal.html#avisoLegal" data-i18n="footerAviso">Aviso Legal</a>
+        <a href="politicaPrivacidad.html#politicaPrivacidad" data-i18n="footerPolitica">Política de Privacidad</a>
         <a href="contacto.html#contacto" data-i18n="contacto">Contacto</a>
       </nav>
     </div>
