--- a/multimedia.html
+++ b/multimedia.html
@@ -69,7 +69,7 @@
         <h2>Multimedia</h2>
       </header>
 
-      <div class="multimedia" id="multimedia">
+      <div class="multimedia efecto-aparecer" id="multimedia">
         <div class="galeria-fotos">
           <figure>
             <img src="imagenes/lab.jpg" alt="Foto 1 de sala limpia">
@@ -134,7 +134,7 @@
            <img src="imagenes/camaraMontena.png" data-src="pdf/camaraMontena.pdf" alt="Imagen del pdf de la cámara de PIM anecoica Montena">
            <figcaption class="figcaption-pdf">
              <img src="imagenes/pdf_2.png" alt="Icono PDF" class="icono-pdf">
-             <span data-i18n="multimediaPdfMontena">PDF de la cámara de PIM anecoica Montena</span>
+             <span data-i18n-html="multimediaPdfMontena">PDF de la cámara de PIM anecoica Montena</span>
            </figcaption>
          </figure>
         </div>
@@ -149,12 +149,12 @@
     <div class="contenedor-footer">
       <img src="imagenes/logoInta2.png" alt="Logo INTA" class="logo-footer">
       <address class="info-footer">
-        <p><small data-i18n="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
+        <p><small data-i18n-html="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
         <p data-i18n="direccionDireccion">Ctra. Ajalvir, km 4, 28850 Torrejón de Ardoz, Madrid</p>
       </address>
       <nav class="enlaces-footer" aria-label="Enlaces legales y de contacto">
-        <a href="javascript:void(0)" data-i18n="footerAviso">Aviso Legal</a>
-        <a href="javascript:void(0)" data-i18n="footerPolitica">Política de Privacidad</a>
+        <a href="avisoLegal.html#avisoLegal" data-i18n="footerAviso">Aviso Legal</a>
+        <a href="politicaPrivacidad.html#politicaPrivacidad" data-i18n="footerPolitica">Política de Privacidad</a>
         <a href="contacto.html#contacto" data-i18n="contacto">Contacto</a>
       </nav>
     </div>
